horizon/horizon-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: horizon-ingress
  namespace: openstack
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: horizon.brilliant.com.bd
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: horizon-int
            port:
              number: 80
